--- a/landing-pages/benzinga.yml
+++ b/landing-pages/benzinga.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "benzinga"
-partnerLogoCard: "Outfund-light"
+partnerLogoCard: "outfund-logo-light"
 
 colors: {
     theme: "#00A3D7",
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As financing experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Our partners at Outfund offer a new way to help you fund your online business with funding from $10K to $3M.",
 
