--- a/landing-pages/concise-digital.yml
+++ b/landing-pages/concise-digital.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "concise-digital"
-partnerLogoCard: "outfund-dark"
+partnerLogoCard: "outfund-logo-dark"
 
 colors: {
     theme: "#ED641A",
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For online Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For online Businesses",
+      },
 
     description: "As growth experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
