--- a/landing-pages/template-active.yml
+++ b/landing-pages/template-active.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "Outfund-dark"
-partnerLogoCard: "Outfund-light"
+partnerLogo: "outfund-logo-dark"
+partnerLogoCard: "outfund-logo-light"
 
 colors: {
     theme: "#1A65BA",
