--- a/landing-pages/das-name.yml
+++ b/landing-pages/das-name.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "Das-logo1"
-partnerLogoCard: "Das-logo1"
+partnerLogo: "das"
+partnerLogoCard: "das"
 logoHeight: "64px"
 
 colors: {
@@ -35,7 +35,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Online Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Online Businesses",
+      },
 
     description: "As growth experts, we know that having the capital to pay for marketing is a huge barrier to growth for any brand. DAS Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
