--- a/landing-pages/xapix.yml
+++ b/landing-pages/xapix.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "xapix"
-partnerLogoCard: "xapix"
+partnerLogoCard: "xapix-card"
 
 colors: {
     theme: "#1A65BA",
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "" },
     font:
       {
         heading: "#0C2542",
