--- a/landing-pages/verishop.yml
+++ b/landing-pages/verishop.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "verishop"
-partnerLogoCard: "verishop"
+partnerLogo: "verishop1"
+partnerLogoCard: "verishop1"
 
 colors: {
     theme: "#1A65BA",
