--- a/landing-pages/verishop.yml
+++ b/landing-pages/verishop.yml
@@ -34,7 +34,7 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Verishop Businesses" },
+      { firstLine: "Revenue Based Finance", secondLine: "For Your Online Business" },
 
     description: "We know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund financing offers a new way to help you fund your online business with funding from $10K to $3M.",
 
