--- a/landing-pages/verishop.yml
+++ b/landing-pages/verishop.yml
@@ -36,7 +36,7 @@ first:
     title:
       { firstLine: "Get the Cash you need to support", secondLine: "Your Growing Online Business" },
 
-    description: "We know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund financing offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "We know that having the money to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund financing offers a new way to help you fund your online business with funding from $10K to $3M. Verishop x Outfund have partnered to support your business, with an exclusive disocunt on available here.",
 
     button: "Get Started",
   }
