--- a/landing-pages/verishop.yml
+++ b/landing-pages/verishop.yml
@@ -75,14 +75,14 @@ fourth:
   {
     title: "Repay On Your Terms",
     description: "Repayments are automatically made from a pre-agreed percentage of your revenue, so you can focus 100% on your business.",
-  
+    button: "Get funded",
   }
 
 fifth:
   {
     title: "What We Do",
-    description: "Outfund can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "Outfund offers a new way to help you fund your online brand.",
+    description: "Powered by Outfund, ___ Capital/Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
+    statement: "___ Finance offers a new way to help you fund your ___ brand.",
   }
 
 sixth:
@@ -90,9 +90,9 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products on online",
-        "Have been selling for +6 months",
+        "Sell products on ___",
+        "Have been trading for 6 months +",
         "Earn $10K+ monthly revenue",
       ],
-    button: "Get Started",
+    button: "Get funded",
   }
