--- a/landing-pages/verishop.yml
+++ b/landing-pages/verishop.yml
@@ -34,7 +34,7 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Super-charged Growth Capital", secondLine: "For Your Online Business" },
+      { firstLine: "Supercharged Funding from $10k to $3M", secondLine: "For Your Inventory & Marketing" },
 
     description: "We know that having the funds to pay for inventory and marketing is a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from $10K upto $3M. Get started today and receive a discount exlusive to Verishop sellers. ",
 
