--- a/landing-pages/verishop.yml
+++ b/landing-pages/verishop.yml
@@ -36,7 +36,7 @@ first:
     title:
       { firstLine: "Supercharged Funding", secondLine: "For Your Growing Online Business" },
 
-    description: "We know that having the funds to pay for inventory and marketing can be a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from $10K upto $3M. Get started today and receive a discount exclusive to Verishop sellers. ",
+    description: "We know that having the funds to pay for inventory and marketing can be a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from $10K to $3M. Get started today and receive a discount exclusive to Verishop sellers. ",
 
     button: "Get Started!",
   }
