--- a/landing-pages/xapix.yml
+++ b/landing-pages/xapix.yml
@@ -11,7 +11,7 @@ partnerLogo: "xapix"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#1A65BA",
+    theme: "#2AA771",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
