--- a/landing-pages/verishop.yml
+++ b/landing-pages/verishop.yml
@@ -36,7 +36,7 @@ first:
     title:
       { firstLine: "Supercharged Funding", secondLine: "For Your Growing Online Business" },
 
-    description: "We know that having the funds to pay for inventory and marketing can be a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from $10K to $3M. Get started today and receive a discount exclusive to Verishop sellers. ",
+    description: "We know that having the funds to pay for inventory and marketing can be a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from $10K to $3M. Get started today and receive a discount exclusive to the Verishop Brand Community. ",
 
     button: "Get Started!",
   }
@@ -81,7 +81,7 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Outfund can help your business achieve its full growth potential. Don’t be held back by limited inventory, or a small marketing budget. Outfund's form of Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
+    description: "Outfund can help members of the Verishop Brand Community achieve their full growth potential. Don’t be held back by limited inventory, or a small marketing budget. Outfund's form of revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
     statement: "Outfund offers a new way to help you fund your brand.",
   }
 
