--- a/landing-pages/askria.yml
+++ b/landing-pages/askria.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "outfund-logo-dark"
-partnerLogoCard: "outfund-logo-light"
+partnerLogo: "askria1"
+partnerLogoCard: "askria1"
 
 colors: {
     theme: "#1A65BA",
