--- a/landing-pages/askria2.yml
+++ b/landing-pages/askria2.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#000000" },
+    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#E81E8C" },
     font:
       {
         heading: "#E81E8C",
