--- a/landing-pages/askria2.yml
+++ b/landing-pages/askria2.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#E81E8C" },
+    card: { bg: "#000000", font: "#F2F6FA", elements: "#E81E8C" },
     font:
       {
         heading: "#E81E8C",
@@ -26,7 +26,7 @@ colors: {
         inverseBody: "#F2F6FA",
       },
     button: { bg: "#E81E8C", text: "#fff" },
-    iconSection: { icon: "#3BB7D3", bg: "#F2F6FA" },
+    iconSection: { icon: "#000000", bg: "#F2F6FA" },
     darkSection: { bg: "#E81E8C", button: { bg: "#000000", text: "#FFF" } },
   }
 
