--- a/landing-pages/askria.yml
+++ b/landing-pages/askria.yml
@@ -39,7 +39,7 @@ first:
         secondLine: "For eCommerce & Saas Businesses",
       },
 
-    description: "As financing experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As financing experts, we know that having the capital to excecute growth plans can be a huge barrier to growth for any company. Outfund offers a new way to help you fund your online business with funding from $10K to $10M.",
 
     button: "Get funded",
   }
