--- a/landing-pages/askria.yml
+++ b/landing-pages/askria.yml
@@ -39,7 +39,7 @@ first:
         secondLine: "For Saas, B2B, & eCommerce",
       },
 
-    description: "As financing experts, we know that having the capital to excecute growth plans can be a huge barrier to growth for any company. Outfund offers a new way to help you fund your online business with funding from $10K to $10M.",
+    description: "As financing experts, we know that having the capital to execute growth plans can be a huge barrier to growth for any company. Outfund offers a new way to help you fund your online business with funding from $10K to $10M.",
 
     button: "Get funded",
   }
