--- a/landing-pages/askria.yml
+++ b/landing-pages/askria.yml
@@ -11,13 +11,13 @@ partnerLogo: "askria1"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#E81E8C",
+    theme: "#ED3B2D",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#F2F6FA", elements: "#E81E8C" },
+    card: { bg: "#000000", font: "#F2F6FA", elements: "#ED3B2D" },
     font:
       {
         heading: "#000000",
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#E81E8C", text: "#fff" },
+    button: { bg: "#ED3B2D", text: "#fff" },
     iconSection: { icon: "#000000", bg: "#F2F6FA" },
-    darkSection: { bg: "#E81E8C", button: { bg: "#000000", text: "#FFF" } },
+    darkSection: { bg: "#ED3B2D", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
