--- a/landing-pages/calculate.yml
+++ b/landing-pages/calculate.yml
@@ -10,13 +10,13 @@ partnerLogo: "calculate"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#1A65BA",
+    theme: "#ED3B2D",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "" },
+    card: { bg: "#000000", font: "#F2F6FA", elements: "ED3B2D" },
     font:
       {
         heading: "#0C2542",
@@ -24,9 +24,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#ED3B2D", text: "#fff" },
+    iconSection: { icon: "#ED3B2D", bg: "#F2F6FA" },
+    darkSection: { bg: "#ED3B2D", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
