--- a/landing-pages/calculate.yml
+++ b/landing-pages/calculate.yml
@@ -16,7 +16,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#F2F6FA", elements: "ED3B2D" },
+    card: { bg: "#000000", font: "#F2F6FA", elements: "#ED3B2D" },
     font:
       {
         heading: "#0C2542",
