--- a/landing-pages/raincatcher.yml
+++ b/landing-pages/raincatcher.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#F2F6FA", elements: "2A9EDB" },
+    card: { bg: "#000000", font: "#F2F6FA", elements: "#2A9EDB" },
     font:
       {
         heading: "#0C2542",
