--- a/landing-pages/raincatcher.yml
+++ b/landing-pages/raincatcher.yml
@@ -20,14 +20,14 @@ colors: {
     card: { bg: "#000000", font: "#F2F6FA", elements: "#2A9EDB" },
     font:
       {
-        heading: "#0C2542",
+        heading: "#2A9EDB",
         inverseHeading: "#F2F6FA",
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
+    button: { bg: "#2A9EDB", text: "#fff" },
     iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    darkSection: { bg: "#2A9EDB", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
