--- a/landing-pages/calculate.yml
+++ b/landing-pages/calculate.yml
@@ -7,7 +7,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "calculate"
-partnerLogoCard: "outfund-logo-light"
+partnerLogoCard: "calculate"
 
 colors: {
     theme: "#ED3B2D",
@@ -16,7 +16,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#F2F6FA", elements: "#ED3B2D" },
+    card: { bg: "#F2F6FA", font: "#00000", elements: "#ED3B2D" },
     font:
       {
         heading: "#0C2542",
