--- a/landing-pages/fratelli.yml
+++ b/landing-pages/fratelli.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "fratelli bg-20"
+partnerLogo: "fratelli"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Online Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Online Businesses",
+      },
 
     description: "As marketing experts, we know that having the capital to pay for marketing is a huge barrier to growth for any brand. Fratelli Capital (powered by Outfund) offers a new way to help you fund your online business with funding from £10K to £10M.",
 
