--- a/landing-pages/fratelli.yml
+++ b/landing-pages/fratelli.yml
@@ -11,13 +11,13 @@ partnerLogo: "fratelli"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#1A65BA",
+    theme: "#0E1B4D",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "" },
+    card: { bg: "#0E1B4D", font: "#F2F6FA", elements: "" },
     font:
       {
         heading: "#0C2542",
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#F7657D", text: "#fff" },
+    iconSection: { icon: "#0E1B4D", bg: "#F2F6FA" },
+    darkSection: { bg: "#0E1B4D", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
