--- a/landing-pages/chicmi.yml
+++ b/landing-pages/chicmi.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "chicmixoutfund"
-partnerLogoCard: "chicmi"
+partnerLogo: "chicmixoutfund1"
+partnerLogoCard: ""
 
 colors: {
     theme: "#1A65BA",
