--- a/landing-pages/chicmi.yml
+++ b/landing-pages/chicmi.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#FAF9F6", font: "#F2F6FA", elements: "#EA4C5F" },
+    card: { bg: "#FAF9F6", font: "#000000", elements: "#EA4C5F" },
     font:
       {
         heading: "#0C2542",
