--- a/landing-pages/chicmi.yml
+++ b/landing-pages/chicmi.yml
@@ -36,7 +36,7 @@ first:
     title:
       { firstLine: "Supercharged Funding", secondLine: "For Your Growing Online Business" },
 
-    description: "We know that having the funds to pay for inventory and marketing can be a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from £10K to £10M. Get started today and receive a discount exclusive to the Verishop Brand Community. ",
+    description: "We know that having the funds to pay for inventory and marketing can be a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from £10K to £10M. Get started today and receive a discount exclusive to the Chicmi Community. ",
 
     button: "Get Started!",
   }
