--- a/landing-pages/chicmi.yml
+++ b/landing-pages/chicmi.yml
@@ -20,14 +20,14 @@ colors: {
     card: { bg: "#63C8C4", font: "#FFF", elements: "#EA4C5F" },
     font:
       {
-        heading: "#0C2542",
+        heading: "#EA4C5F",
         inverseHeading: "#F2F6FA",
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#EA4C5F", text: "#fff" },
+    iconSection: { icon: "#EA4C5F", bg: "#F2F6FA" },
+    darkSection: { bg: "#EA4C5F", button: { bg: "#EA4C5F", text: "#FFF" } },
   }
 
 # Content
