--- a/landing-pages/chicmi.yml
+++ b/landing-pages/chicmi.yml
@@ -11,23 +11,23 @@ partnerLogo: "chicmixoutfund1"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#FA8C26",
+    theme: "#1A65BA",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#63C8C4", font: "#FFF", elements: "#EA4C5F" },
+    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#000000" },
     font:
       {
-        heading: "#EA4C5F",
+        heading: "#0C2542",
         inverseHeading: "#F2F6FA",
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#EA4C5F", text: "#fff" },
-    iconSection: { icon: "#EA4C5F", bg: "#F2F6FA" },
-    darkSection: { bg: "#EA4C5F", button: { bg: "#EA4C5F", text: "#FFF" } },
+    button: { bg: "#1A65BA", text: "#fff" },
+    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
+    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
@@ -36,7 +36,7 @@ first:
     title:
       { firstLine: "Supercharged Funding", secondLine: "For Your Growing Online Business" },
 
-    description: "We know that having the funds to pay for inventory and marketing can be a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from £10K to £10M. Get started today and receive a discount exclusive to the Chicmi Community. ",
+    description: "We know that having the funds to pay for inventory and marketing can be a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your growing online business, with funding from $10K to $3M. Get started today and receive a discount exclusive to the Chicmi Brand Community. ",
 
     button: "Get Started!",
   }
