--- a/landing-pages/luz.yml
+++ b/landing-pages/luz.yml
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#6A8FF8", text: "#fff" },
+    iconSection: { icon: "#6A8FF8", bg: "#F2F6FA" },
+    darkSection: { bg: "#6A8FF8", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
