--- a/landing-pages/luz.yml
+++ b/landing-pages/luz.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "luz"
-partnerLogoCard: "outfund-logo-light"
+partnerLogoCard: "outfund-logo-dark"
 
 colors: {
     theme: "#6A8FF8",
