--- a/landing-pages/luz.yml
+++ b/landing-pages/luz.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#F8F3EC", font: "#000000", elements: "#F97034" },
+    card: { bg: "#F8F3EC", font: "#000000", elements: "#6A8FF8" },
     font:
       {
         heading: "#0C2542",
