--- a/landing-pages/luz.yml
+++ b/landing-pages/luz.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "luz"
-partnerLogoCard: "outfund-logo-dark"
+partnerLogoCard: "outfund-logo-light"
 
 colors: {
     theme: "#6A8FF8",
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#F8F3EC", font: "#000000", elements: "#6A8FF8" },
+    card: { bg: "#000000", font: "#FFF", elements: "#6A8FF8" },
     font:
       {
         heading: "#0C2542",
