--- a/landing-pages/mutesix.yml
+++ b/landing-pages/mutesix.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "mutesix"
+partnerLogo: "mutesix1"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#FFF", elements: "#6A8FF8" },
+    card: { bg: "#000000", font: "#FFF", elements: "#309BDD" },
     font:
       {
         heading: "#0C2542",
