--- a/landing-pages/salesmanago.yml
+++ b/landing-pages/salesmanago.yml
@@ -8,16 +8,16 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "salesmanago"
-partnerLogoCard: "outfund-logo-light"
+partnerLogoCard: "salesmanago"
 
 colors: {
-    theme: "#1A65BA",
+    theme: "#CBDDA4",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "" },
+    card: { bg: "#000000", font: "#FFF", elements: "CBDDA4" },
     font:
       {
         heading: "#0C2542",
