--- a/landing-pages/salesmanago.yml
+++ b/landing-pages/salesmanago.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "salesmanago"
-partnerLogoCard: "salesmanago"
+partnerLogoCard: "outfund-logo-light"
 
 colors: {
     theme: "#CBDDA4",
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#FFF", elements: "CBDDA4" },
+    card: { bg: "#000000", font: "#FFF", elements: "#1A65BA" },
     font:
       {
         heading: "#0C2542",
