--- a/landing-pages/salesmanago.yml
+++ b/landing-pages/salesmanago.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#FFF", elements: "#273A4B" },
+    card: { bg: "#000000", font: "#FFF", elements: "#CBDDA4" },
     font:
       {
         heading: "#0C2542",
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#273A4B", text: "#fff" },
-    iconSection: { icon: "#273A4B", bg: "#F2F6FA" },
-    darkSection: { bg: "#273A4B", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#CBDDA4", text: "#000000" },
+    iconSection: { icon: "#CBDDA4", bg: "#F2F6FA" },
+    darkSection: { bg: "#273A4B", button: { bg: "#CBDDA4", text: "#000000" } },
   }
 
 # Content
