--- a/landing-pages/ecommerceaccountants-uk.yml
+++ b/landing-pages/ecommerceaccountants-uk.yml
@@ -36,7 +36,7 @@ first:
     title:
       { firstLine: "Revenue Based Finance", secondLine: "For Ecommerce Businesses" },
 
-    description: "As eCommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Ecommerce Accounting Capital (powered by Outfund) offers a new way to help you fund your online business with funding from £10K to £10M.",
+    description: "As Ecommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Ecommerce Accounting  (powered by Outfund) offers a new way to help you fund your online business with funding from £10K to £10M.",
 
     button: "Get funded",
   }
