--- a/landing-pages/amplifiez.yml
+++ b/landing-pages/amplifiez.yml
@@ -92,7 +92,7 @@ sixth:
       [
         "Sell products or services online",
         "Have been trading for 6 months +",
-        "Earn $10K+ monthly revenue",
+        "Earn £10K+ monthly revenue",
       ],
     button: "Get funded",
   }
