--- a/landing-pages/total-processing.yml
+++ b/landing-pages/total-processing.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "TP2"
-partnerLogoCard: "tp-white"
+partnerLogoCard: "TP2-white"
 
 colors: {
     theme: "#147bd1",
