--- a/landing-pages/actiogroup.yml
+++ b/landing-pages/actiogroup.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "actio-white-thin"
-partnerLogoCard: "actio-white"
+partnerLogo: "actio-long"
+partnerLogoCard: "actio-long"
 
 colors: {
     theme: "#FAFAFA",
