--- a/landing-pages/actiogroup.yml
+++ b/landing-pages/actiogroup.yml
@@ -82,7 +82,7 @@ fifth:
   {
     title: "What We Do",
     description: "Powered by Outfund, Actio Group Capital can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "Actio Group Capital offers a new way to help you fund your online brand.",
+    statement: "Actio Group Capital offers a new way to help fund your online brand.",
   }
 
 sixth:
