--- a/landing-pages/adaine.yml
+++ b/landing-pages/adaine.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "#000000", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#F2F6FA", elements: "CE20FF" },
+    card: { bg: "#000000", font: "#F2F6FA", elements: "#CE20FF" },
     font:
       {
         heading: "#0C2542",
