--- a/landing-pages/ply-studio.yml
+++ b/landing-pages/ply-studio.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "outfund-logo-dark"
-partnerLogoCard: "outfund-logo-light"
+partnerLogo: "ply-studio"
+partnerLogoCard: "ply-studio"
 
 colors: {
     theme: "#eb5968",
