--- a/landing-pages/financialplanner-ie.yml
+++ b/landing-pages/financialplanner-ie.yml
@@ -11,13 +11,13 @@ partnerLogo: "fpgroupoutfund"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#1A65BA",
+    theme: "#2E3191",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#000000" },
+    card: { bg: "#2E3191", font: "#F2F6FA", elements: "#000000" },
     font:
       {
         heading: "#0C2542",
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#2E3191", text: "#fff" },
+    iconSection: { icon: "#2E3191", bg: "#F2F6FA" },
+    darkSection: { bg: "#2E3191", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
