--- a/landing-pages/mutesix.yml
+++ b/landing-pages/mutesix.yml
@@ -11,10 +11,10 @@ partnerLogo: "mutesix-white"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#309BDD",
+    theme: "#00113D",
     page: "#fff",
 
-    navbarBg: "", # If nothing present, page color will be used
+    navbarBg: "#00113D", # If nothing present, page color will be used
 
     # Card colors
     card: { bg: "#000000", font: "#FFF", elements: "#309BDD" },
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#309BDD", text: "#fff" },
-    iconSection: { icon: "#309BDD", bg: "#F2F6FA" },
-    darkSection: { bg: "#309BDD", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#00113D", text: "#fff" },
+    iconSection: { icon: "#00113D", bg: "#F2F6FA" },
+    darkSection: { bg: "#00113D", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
